--- a/ongs-lista.html
+++ b/ongs-lista.html
@@ -146,6 +146,7 @@
           <button id="btn-filtrar" class="ml-3 p-2">Filtrar</button>
       </div>
       <hr class=" w-full">
+      <p class="text-center mt-5 mb-5 hidden" id="aviso-sem-ongs">Sem elementos correspondentes</p>
       <div id="container-ongs" class=" grid grid-cols-1 mx-4 sm:mx-0 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 gap-2 h-auto">
         <!-- <div id="${linha.id}" class="cards-ong md:mt-10 mt:ml-6 w-[20rem] h-20 rounded-3xl ml-10 mb-3" >
             <h1 class="text-center">Nome ong teste</h1> 
