--- a/ongs-lista.html
+++ b/ongs-lista.html
@@ -132,18 +132,24 @@
 
   <div class="flex justify-center w-full h-auto">
     <div id="container" class="mt-10 mb-24 h-auto">
-      <p class="text-4xl w-[32rem] h-[3rem] mt-3 ml-6">ONG participantes do projeto</p>
-      <div class="inline-block w-full h-[5rem] mt-5">
-          <input type="text" name="ong-name" id="ong-name-search" placeholder="Digite um nome" class="w-[16rem] h-[2rem] ml-6" onfocusout="filtrarNome()">
-          <label class="ml-10" for="state-localization">Localização</label>
-          <select name="" id="state-localization" class="w-[8rem]" onfocusout="filtrarEstado()">
-              <option value="0">Todas as opções</option>
-          </select>
-          <label class="ml-10" for="ngo-cause">Causas</label>
-          <select name="" id="ngo-cause" class="w-[8rem]" onfocusout="filtrarCausa()">
-              <option value="0">Todas as opções</option>
-          </select>
-          <button id="btn-filtrar" class="ml-3 p-2">Filtrar</button>
+      <p class="text-4xl w-auto h-[3rem] mt-3 ml-6">ONG participantes do projeto</p>
+      <div class="w-full h-[5rem] mt-5" id="container-filter-itens">
+          <ul id="filter-itens">
+            <li><input type="text" name="ong-name" id="ong-name-search" placeholder="Digite um nome" class="w-[16rem] h-[2rem] ml-6" onfocusout="filtrarNome()"></li>
+            <li>
+              <label class="ml-10" for="state-localization">Localização</label>
+              <select name="" id="state-localization" class="w-[8rem]" onfocusout="filtrarEstado()">
+                  <option value="0">Todas as opções</option>
+              </select>
+            </li>
+            <li>
+              <label class="ml-10" for="ngo-cause">Causas</label>
+              <select name="" id="ngo-cause" class="w-[8rem]" onfocusout="filtrarCausa()">
+                  <option value="0">Todas as opções</option>
+              </select>
+            </li>
+            <li><button id="btn-filtrar" class="ml-3 p-2">Filtrar</button></li>
+          </ul>
       </div>
       <hr class=" w-full">
       <p class="text-center mt-5 mb-5 hidden" id="aviso-sem-ongs">Sem elementos correspondentes</p>
